# Vault-007

./: .env.example  .gitignore  ARCHITECTURE.md  App.tsx  DEPLOYMENT_GUIDE.md  LLM_CONTEXT.md  MULTI_WALLET_GUIDE.md  PROJECT_CONTEXT.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
components/: ActionSuite.tsx  AdminPanel.tsx  CTA.tsx  DashboardPreview.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  OnboardingTour.tsx  PrivateValue.tsx  ProtocolSpecs.tsx  StatusMonitor.tsx  StealthNotes.tsx  TransferPanel.tsx  VaultTerminal.tsx  WalletModal.tsx  WhyConfidential.tsx
context/: VaultContext.tsx
private-alpha-vault-backend 2/: Anchor.toml  Cargo.toml  README.md
private-alpha-vault-backend 2/programs/private_alpha_vault/: Cargo.toml
private-alpha-vault-backend 2/programs/private_alpha_vault/src/: constants.rs  errors.rs  lib.rs
private-alpha-vault-backend 2/programs/private_alpha_vault/src/instructions/: apply_yield.rs  claim_access.rs  claim_stealth_note.rs  claim_yield.rs  create_stealth_note.rs  deposit.rs  initialize_vault.rs  mod.rs  transfer.rs  withdraw.rs  yield_utils.rs
private-alpha-vault-backend 2/programs/private_alpha_vault/src/state/: mod.rs  stealth_note.rs  user_position.rs  vault.rs
scripts/: check-balance.ts  check-vault-authority.ts  initialize-vault.ts  test-new-features.ts  test-vault-state.ts
services/: browser-crypto.ts  inco-decrypt.ts  vault.ts  wallet-detector.ts
