[workspace]
members = ["programs/*"]

[profile.release]
overflow-checks = true

[patch.crates-io]
# `constant_time_eq` 0.4.2 uses `edition = 2024` upstream which older Cargo cannot parse.
# We vendor the same crate version and downshift its manifest to edition 2021.
constant_time_eq = { path = "vendor/constant_time_eq-0.4.2" }
# `blake3` also moved to edition 2024; vendored for Solana SBF build tool compatibility.
blake3 = { path = "vendor/blake3-1.8.3" }
borsh-derive = { path = "vendor/borsh-derive-1.6.0" }
